IE centering: adding height to flex container so justify center works on IE fixes #2377

--- a/meinberlin/assets/scss/components/_project_header.scss
+++ b/meinberlin/assets/scss/components/_project_header.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     padding: 1.3em inherit;
     position: relative;
+    height: 100px; //used for centering on IE - min-height overides it
 
     text-align: center;
 
